# Almgren-Chriss-Model

./: .gitignore  CMakeLists.txt  README.md  main.cpp  practice.cpp
include/: execution_metrics.hpp  execution_scheduler.hpp  market_data.hpp  market_impact_model.hpp  trading_engine.hpp
python/: __init__.py  bindings.cpp  web_app.py
python/templates/: index.html
src/: execution_scheduler.cpp  main.cpp  market_impact_model.cpp  trading_engine.cpp
